# llm-zoomcamp-2026

./: .gitignore  README.md  homework1.ipynb  notebook.ipynb  pyproject.toml  rag_helper.py  sqlite-ingest.ipynb
llm-zoomcamp-dlt/: README.md  agent.py  analyze.py  ingest.py  logfire_pipeline.py  main.py
llm-zoomcamp-hw2/: embedder_2.py  h2.ipynb  pyproject.toml  q1.py
llm-zoomcamp-hw3/: README.md
llm-zoomcamp-hw4/: homework4.py
llm-zoomcamp-hw5/: homework5.py  rag_helper.py  starter.py
